--- a/starter-code/css pages/index.css
+++ b/starter-code/css pages/index.css
@@ -1,6 +1,6 @@
 *, ::after,::before{
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 :root{
@@ -35,3 +35,102 @@ body{
     font-family: 'Jost', sans-serif;
     font-style: normal;
 }
+
+main{
+    width: 100%;
+    /* height: 100%; */
+}
+
+nav{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   margin-top: 64.84px;
+}
+
+.links a{
+    text-decoration: none;
+    padding: 0 18px;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--secondary-color-dark-peach);
+    letter-spacing: 2px;
+}
+
+.logo{
+    width: 196px;
+}
+
+
+.links a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+footer{
+    width: 100%;
+    height: 393px;
+    background-color: var(--primary-color-black);
+}
+
+.footer-links a{
+    text-decoration: none;
+    color: var(--primary-color-white);
+    padding: 0 18px;
+    font-size: 14px;
+    font-weight: 400;
+} 
+
+
+.container-content{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 151px;
+} 
+
+hr{
+    width: 1111px;
+    height: 1px;
+    margin: 40px auto;
+    
+}
+
+.container{
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+    color: var(--secondary-color-light-grey);
+   
+}
+
+.container-direction{
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+.container-direction h1{
+    font-size: var(--heading-3-font-size);
+}
+
+.container-direction h2{
+    font-size: var(--heading-1-font-size);
+}
+
+.container-contact{
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+
+.container-contact h1{
+    font-size: var(--heading-3-font-size);
+}
+
+.container-contact h2{
+    font-size: var(--heading-1-font-size);
+}
+
+.footer-icons img{
+    width: 15px;
+    margin-top: 70px;
+}
+
