--- a/starter-code/css pages/index.css
+++ b/starter-code/css pages/index.css
@@ -20,10 +20,12 @@
     --heading-1-font: 'Jost', sans-serif;
     --heading-1-color: #1D1C1E;
     --heading-1-font-size: 13px;
+    --heading-1-font-weight: 400;
 
     --heading-2-font: 'Jost', sans-serif;
     --heading-2-color: #1d1c1e;
     --heading-2-font-size: 40px;
+    --heading-2-font-weight: 500;
 
     --heading-3-font: 'Jost', sans-serif;
     --heading-3-color: #1d1c1e;
@@ -38,7 +40,7 @@ body{
 
 main{
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
 }
 
 nav{
@@ -57,6 +59,10 @@ nav{
     letter-spacing: 2px;
 }
 
+.link a{
+    color: var(--primary-color-white);
+}
+
 .logo{
     width: 196px;
 }
@@ -65,6 +71,74 @@ nav{
 .links a:hover{
     text-decoration: underline;
     cursor: pointer;
+}
+
+.project-container{
+    position: relative;
+    top: 5rem;
+    width: 1111px;
+    height: 292px;
+    margin: 0 auto;
+    border-radius: 15px;
+    background-color: var(--primary-color-peach);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+.element {
+    margin-top: -15rem;
+}
+
+.element img{
+    height: 30rem;
+}
+
+
+
+.action{
+  width: 800px;
+  margin-left: 18rem;
+}
+
+
+.get-touch {
+    width: 9.5rem;
+    height: 3.5rem;
+    position: relative;
+    top: -17rem;
+    float: right;
+    margin-right: 5rem;
+    border-radius: .5rem;
+    border: none;
+    -webkit-border-radius: .5rem;
+    -moz-border-radius: .5rem;
+    -ms-border-radius: .5rem;
+    -o-border-radius: .5rem;
+}
+
+.project{
+    position: relative;
+    top: 5rem;
+    margin-inline: 10%;
+}
+
+.project h1{
+    font-size: var(--heading-2-font-size);
+    font-weight: var(--heading-2-font-weight);
+    color: var(--primary-color-white);
+    line-height: 40px;
+    width: 268px;
+}
+
+.project h2{
+    font-size: var(--main-font-size);
+    color: var(--primary-color-white);
+    font-weight: var(--heading-1-font-weight);
+    line-height: 26px;
+    margin-top: 1rem;
+    width: 459px;
 }
 
 footer{
@@ -82,11 +156,8 @@ footer{
 } 
 
 
-.container-content{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 151px;
+.foot{
+    padding-top: 7rem;
 } 
 
 hr{
@@ -95,6 +166,7 @@ hr{
     margin: 40px auto;
     
 }
+
 
 .container{
      display: flex;
@@ -129,8 +201,14 @@ hr{
     font-size: var(--heading-1-font-size);
 }
 
+.footer-icons {
+    width: 10rem;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 45px;
+}
+
 .footer-icons img{
     width: 15px;
-    margin-top: 70px;
 }
 
