--- a/starter-code/css pages/home.css
+++ b/starter-code/css pages/home.css
@@ -1,6 +1,6 @@
 *, ::after,::before{
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 :root{
@@ -20,10 +20,12 @@
     --heading-1-font: 'Jost', sans-serif;
     --heading-1-color: #1D1C1E;
     --heading-1-font-size: 13px;
+    --heading-1-font-weight: 400;
 
     --heading-2-font: 'Jost', sans-serif;
     --heading-2-color: #1d1c1e;
     --heading-2-font-size: 40px;
+    --heading-2-font-weight: 500;
 
     --heading-3-font: 'Jost', sans-serif;
     --heading-3-color: #1d1c1e;
@@ -36,21 +38,63 @@ body{
     font-style: normal;
 }
 
+main{
+    width: 100%;
+    height: 100%;
+}
+
+nav{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   margin-top: 64.84px;
+}
+
+.links a{
+    text-decoration: none;
+    padding: 0 18px;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--secondary-color-dark-peach);
+    letter-spacing: 2px;
+}
+
+.link a{
+    color: var(--primary-color-white);
+}
+
+.logo{
+    width: 196px;
+}
+
+
+.links a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+
 .first-section{
     display: flex;
     justify-content: center;
 }
-.container{
-    /* padding: 0 1rem; */
+
+.container1{
     width: 80%;
     height: 640px;
     background-color: var(--primary-color-peach);
+    background-image: url(/starter-code/assets/home/desktop/bg-pattern-hero-home.svg);
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: right;
+    position: relative;
+    top:  2rem;
+    border-radius: 8px;
 }
+
 
 .container-box{
     /* width: 40%; */
@@ -59,10 +103,13 @@ body{
     justify-content: center;
 }
 .container-image{
-    background-image: url(/starter-code/assets/home/desktop/bg-pattern-hero-home.svg);
+    /* background-image: url(/starter-code/assets/home/desktop/bg-pattern-hero-home.svg); */
     background-size: contain;
     background-repeat: no-repeat;
     width: 40%;
+    display: flex;
+    align-items:center;
+    justify-content: center;
 }
 .container-header h6{
     width: 540px;
@@ -104,7 +151,8 @@ font-family: var(--main-font);
 }
 
 .container-image img{
- max-width: 100%;
+ /* max-width: 100%; */
+ margin-top: 8.688rem;
 
   
 }
@@ -117,3 +165,143 @@ font-family: var(--main-font);
    
     width: 540px;
 }
+
+
+.project-container{
+    position: relative;
+    top: 5rem;
+    width: 1111px;
+    height: 292px;
+    margin: 0 auto;
+    border-radius: 15px;
+    background-color: var(--primary-color-peach);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    overflow: hidden;
+}
+
+.element {
+    margin-top: -15rem;
+}
+
+.element img{
+    height: 30rem;
+}
+
+.action{
+  width: 800px;
+  margin-left: 18rem;
+}
+
+
+.get-touch {
+    width: 9.5rem;
+    height: 3.5rem;
+    position: relative;
+    top: -17rem;
+    float: right;
+    margin-right: 5rem;
+    border-radius: .5rem;
+    border: none;
+    -webkit-border-radius: .5rem;
+    -moz-border-radius: .5rem;
+    -ms-border-radius: .5rem;
+    -o-border-radius: .5rem;
+}
+
+.project{
+    position: relative;
+    top: 5rem;
+    margin-inline: 10%;
+}
+
+.project h1{
+    font-size: var(--heading-2-font-size);
+    font-weight: var(--heading-2-font-weight);
+    color: var(--primary-color-white);
+    line-height: 40px;
+    width: 268px;
+}
+
+.project h2{
+    font-size: var(--main-font-size);
+    color: var(--primary-color-white);
+    font-weight: var(--heading-1-font-weight);
+    line-height: 26px;
+    margin-top: 1rem;
+    width: 459px;
+}
+
+footer{
+    width: 100%;
+    height: 393px;
+    background-color: var(--primary-color-black);
+}
+
+.footer-links a{
+    text-decoration: none;
+    color: var(--primary-color-white);
+    padding: 0 18px;
+    font-size: 14px;
+    font-weight: 400;
+} 
+
+
+.foot{
+    padding-top: 7rem;
+} 
+
+hr{
+    width: 1111px;
+    height: 1px;
+    margin: 40px auto;
+    
+}
+
+
+.container{
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+    color: var(--secondary-color-light-grey);
+   
+}
+
+.container-direction{
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+.container-direction h1{
+    font-size: var(--heading-3-font-size);
+}
+
+.container-direction h2{
+    font-size: var(--heading-1-font-size);
+}
+
+.container-contact{
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+
+.container-contact h1{
+    font-size: var(--heading-3-font-size);
+}
+
+.container-contact h2{
+    font-size: var(--heading-1-font-size);
+}
+
+.footer-icons {
+    width: 10rem;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 45px;
+}
+
+.footer-icons img{
+    width: 15px;
+}
+
