--- a/starter-code/css pages/graphic-design.css
+++ b/starter-code/css pages/graphic-design.css
@@ -20,10 +20,12 @@
     --heading-1-font: 'Jost', sans-serif;
     --heading-1-color: #1D1C1E;
     --heading-1-font-size: 13px;
+    --heading-1-font-weight: 400;
 
     --heading-2-font: 'Jost', sans-serif;
     --heading-2-color: #1d1c1e;
     --heading-2-font-size: 40px;
+    --heading-2-font-weight: 500;
 
     --heading-3-font: 'Jost', sans-serif;
     --heading-3-color: #1d1c1e;
@@ -34,14 +36,50 @@
 body{
     font-family: 'Jost', sans-serif;
     font-style: normal;
-    /* width: 1440px;
-    height: 2286px; */
+}
+
+main{
+    /* position: relative; */
+    width: 100%;
+    height: 100%;
+}
+
+nav{
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   margin-top: 64.84px;
+}
+
+.links a{
+    text-decoration: none;
+    padding: 0 18px;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--secondary-color-dark-peach);
+    letter-spacing: 2px;
+}
+
+.link a{
+    color: var(--primary-color-white);
+}
+
+.logo{
+    width: 196px;
+}
+
+
+.links a:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .Main-content {
-    width: 1111px;
+    position: relative;
+    width: 1090px;
     height: 252px;
-    margin: 13rem;
+    top: 5rem;
+    margin-left: 15rem;
     background-color: var(--primary-color-peach);
     background-image: url(/starter-code/assets/graphic-design/desktop/bg-pattern-intro-graphic.svg);
     background-size: 100% 150%;
@@ -51,7 +89,8 @@ body{
 .intro{
     text-align: center;
     padding-top: 5rem;
-    color: var(--primary-color-white)
+    color: var(--primary-color-white);
+    margin-bottom: 5rem;
 }
 .intro p{
     padding-top: 1rem;
@@ -63,19 +102,21 @@ body{
 }
 
 .Second-content {
-    width: 100%;
+    /* width: 100%; */
     height: 478px;
-    /* margin: 13rem; */
-    /* padding: 12rem ; */
-    margin: 0 auto;
-    padding-top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10rem;
 }
- .container {
+
+.container {
+    position: relative;
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 1rem;
     height: 478px;
-    
+    justify-content: center;
 }
 .container img{
     width: 22rem;
@@ -120,13 +161,15 @@ body{
     text-align: center;
     color: var(--secondary-color-dark-peach);
 }
-
 .third-content {
     width: 100%;
-    height: 478px;
-    /* margin: 13rem; */
+    height: 408px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 12rem ;
-    padding-top: 0;
+    padding-top: 2rem;
+    margin-top: 5rem;
 }
 .Designs {
     display: grid;
@@ -157,4 +200,136 @@ body{
     border-radius: 20px;
 }
 
+
+.project-container{
+    position: relative;
+    top: 5rem;
+    width: 1111px;
+    height: 292px;
+    margin: 0 auto;
+    border-radius: 15px;
+    background-color: var(--primary-color-peach);
+    overflow: hidden;
+}
+
+.element {
+    margin-top: -15rem;
+}
+
+.element img{
+    height: 30rem;
+}
+
+
+
+.action{
+  width: 800px;
+  margin-left: 18rem;
+}
+
+
+.get-touch {
+    width: 9.5rem;
+    height: 3.5rem;
+    position: relative;
+    top: -17rem;
+    float: right;
+    margin-right: 5rem;
+    border-radius: .5rem;
+    border: none;
+}
+
+.project{
+    position: relative;
+    top: 5rem;
+    margin-inline: 10%;
+}
+
+.project h1{
+    font-size: var(--heading-2-font-size);
+    font-weight: var(--heading-2-font-weight);
+    color: var(--primary-color-white);
+    line-height: 40px;
+    width: 268px;
+}
+
+.project h2{
+    font-size: var(--main-font-size);
+    color: var(--primary-color-white);
+    font-weight: var(--heading-1-font-weight);
+    line-height: 26px;
+    margin-top: 1rem;
+    width: 459px;
+}
+
+footer{
+    width: 100%;
+    height: 393px;
+    background-color: var(--primary-color-black);
+}
+
+.footer-links a{
+    text-decoration: none;
+    color: var(--primary-color-white);
+    padding: 0 18px;
+    font-size: 14px;
+    font-weight: 400;
+} 
+
+
+.foot{
+    padding-top: 7rem;
+} 
+
+hr{
+    width: 1111px;
+    height: 1px;
+    margin: 40px auto;
+    
+}
+
+
+.container1{
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+    color: var(--secondary-color-light-grey);
+   
+}
+
+.container-direction{
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+.container-direction h1{
+    font-size: var(--heading-3-font-size);
+}
+
+.container-direction h2{
+    font-size: var(--heading-1-font-size);
+}
+
+.container-contact{
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+
+.container-contact h1{
+    font-size: var(--heading-3-font-size);
+}
+
+.container-contact h2{
+    font-size: var(--heading-1-font-size);
+}
+
+.footer-icons {
+    width: 10rem;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 45px;
+}
+
+.footer-icons img{
+    width: 15px;
+}
 
