--- a/starter-code/css pages/web_design.css
+++ b/starter-code/css pages/web_design.css
@@ -67,15 +67,70 @@ nav{
     width: 196px;
 }
 
-
 .links a:hover{
     text-decoration: underline;
     cursor: pointer;
 }
 
-.project-container{
+.actions{
+   width: 800px;
+    margin-left: 19.5rem;
+   transform: scaleY(-1);
+   -webkit-transform: scaleY(-1);
+   -moz-transform: scaleY(-1);
+   -ms-transform: scaleY(-1);
+   -o-transform: scaleY(-1);
+}
+
+.web_design{
+    position: absolute;
+    top: 10rem;
+    left: 13rem;
     overflow: hidden;
+    width: 1111px;
+    height: 292px;
+    margin: 0 auto;
+    background-color: var(--primary-color-peach);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+.design{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  width: 400px;
+  margin: 0 auto;
+  padding-top: 5rem;
+}
+
+.web_design h1{
+    font-size: 48px;
+    color: var(--primary-color-white);
+    font-weight: var(--heading-2-font-weight);
+    line-height: 48px;
+}
+
+.web_design h2{
+    font-size: var(--main-font-size);
+    color: var(--primary-color-white);
+    font-weight: var(--heading-1-font-weight);
+}
+
+.leaf img{
+    width: 1006px;
+    height: 594px;
+    margin-top: 13rem;
+}
+
+.project-container{
     position: relative;
+    overflow: hidden;
     top: 5rem;
     width: 1111px;
     height: 292px;
@@ -96,13 +151,10 @@ nav{
     height: 30rem;
 }
 
-
-
 .action{
   width: 800px;
   margin-left: 18rem;
 }
-
 
 .get-touch {
     width: 9.5rem;
