--- a/starter-code/css pages/index.css
+++ b/starter-code/css pages/index.css
@@ -92,6 +92,7 @@ nav{
     -moz-border-radius: 15px;
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
+    overflow: hidden;
 }
 
 .element {
