--- a/starter-code/css pages/graphic-design.css
+++ b/starter-code/css pages/graphic-design.css
@@ -49,6 +49,7 @@ nav{
    justify-content: space-around;
    align-items: center;
    margin-top: 64.84px;
+   width: 100%;
 }
 
 .links a{
@@ -76,13 +77,18 @@ nav{
 
 .Main-content {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 1090px;
     height: 252px;
     top: 5rem;
-    margin-left: 15rem;
+    /* margin-left: 15rem; */
     background-color: var(--primary-color-peach);
     background-image: url(/starter-code/assets/graphic-design/desktop/bg-pattern-intro-graphic.svg);
-    background-size: 100% 150%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     border-radius: 15px;
     margin: 0 auto;
 }
@@ -100,7 +106,18 @@ nav{
     font-size: 16px;
     line-height: 26px;
 }
-
+.bg-svg {
+    position: absolute;
+    width: 1006px;
+    height: 594px;
+    left: 0px;
+    top: 281px;
+    background: #F1F3F5;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    border-radius: 297px 297px 297px 0px;
+    z-index: -1;
+}
 .Second-content {
     /* width: 100%; */
     height: 478px;
@@ -168,7 +185,7 @@ nav{
     justify-content: center;
     align-items: center;
     padding: 12rem ;
-    padding-top: 2rem;
+    padding-top: 12rem;
     margin-top: 5rem;
 }
 .Designs {
