--- a/starter-code/css pages/graphic-design.css
+++ b/starter-code/css pages/graphic-design.css
@@ -45,20 +45,24 @@ main{
 }
 
 nav{
+    width: 69.438rem;
    display: flex;
-   justify-content: space-around;
+   justify-content: space-between;
    align-items: center;
-   margin-top: 64.84px;
-   width: 100%;
+   margin: 64.84px auto 0 auto;
 }
-
+.links {
+    display: flex;
+    width: 370px;
+    justify-content: space-between;
+}
 .links a{
     text-decoration: none;
-    padding: 0 18px;
+    padding: 0 0;
     font-size: 14px;
     font-weight: 400;
     color: var(--secondary-color-dark-peach);
-    letter-spacing: 2px;
+    letter-spacing: 2px;    
 }
 
 .link a{
@@ -80,7 +84,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1090px;
+    width: 1111px;
     height: 252px;
     top: 5rem;
     /* margin-left: 15rem; */
@@ -119,7 +123,7 @@ nav{
     z-index: -1;
 }
 .Second-content {
-    /* width: 100%; */
+    width: 100%;
     height: 478px;
     display: flex;
     justify-content: center;
@@ -350,3 +354,17 @@ hr{
     width: 15px;
 }
 
+
+@media only screen and (max-width:820px) and (min-width: 450px){
+    nav{
+        width: 50rem;
+        /* margin: 14.84px auto 0 auto; */
+    }
+    .logo{
+        margin-left: 1.5rem;
+    }
+
+    .Main-content{
+        width: 689px;
+    }
+}
