--- a/starter-code/css pages/graphic-design.css
+++ b/starter-code/css pages/graphic-design.css
@@ -158,6 +158,10 @@ nav{
     height: 478px;
     background: #FDF3F0;
 } 
+.grid-item:hover{
+    background: var(--primary-color-peach);
+    cursor: pointer;
+}
 
 .grid-item h2 {
     width: 286px;
@@ -230,6 +234,10 @@ nav{
     margin: 0 auto;
     border-radius: 15px;
     background-color: var(--primary-color-peach);
+    background-image: url(../assets/shared/desktop/bg-pattern-call-to-action.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     overflow: hidden;
 }
 
@@ -253,17 +261,21 @@ nav{
     width: 9.5rem;
     height: 3.5rem;
     position: relative;
-    top: -17rem;
-    float: right;
+    margin-top: 8rem; 
     margin-right: 5rem;
     border-radius: .5rem;
     border: none;
 }
 
+
 .project{
     position: relative;
     top: 5rem;
     margin-inline: 10%;
+}
+.gig{
+    display: flex;
+    justify-content: space-between;
 }
 
 .project h1{
@@ -310,47 +322,42 @@ hr{
 }
 
 
-.container1{
-     display: flex;
-     justify-content: space-evenly;
-     align-items: center;
+.container1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     color: var(--secondary-color-light-grey);
-   
+    width: 69.438rem;
+    margin: 0 auto;
+    line-height: 1.5rem;
 }
-
-.container-direction{
+.container-direction {
     mix-blend-mode: normal;
     opacity: 0.5;
 }
-.container-direction h1{
+.container-direction h1 {
     font-size: var(--heading-3-font-size);
 }
-
-.container-direction h2{
+.container-direction h2 {
     font-size: var(--heading-1-font-size);
 }
-
-.container-contact{
+.container-contact {
     mix-blend-mode: normal;
     opacity: 0.5;
 }
-
-.container-contact h1{
+.container-contact h1 {
     font-size: var(--heading-3-font-size);
 }
-
-.container-contact h2{
+.container-contact h2 {
     font-size: var(--heading-1-font-size);
 }
-
 .footer-icons {
     width: 10rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 45px;
 }
-
-.footer-icons img{
+.footer-icons img {
     width: 15px;
 }
 
@@ -367,4 +374,86 @@ hr{
     .Main-content{
         width: 689px;
     }
+    .grid-item {
+        display: flex;
+        background-color: var(--primary-color-white);
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 689px;
+        height: 310px;
+        background: #FDF3F0
+        
+    }
+    
+    .container {
+        display: grid;
+        grid-template-columns: auto ;
+        gap: 2rem;
+        height: 478px;
+        justify-content: center;
+
+
+    }
+    .container img{
+        width: 339px;
+        height: 310px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 0px;
+        margin-right: 5rem;
+    }
+    .grid-item h2{
+        display: block;
+
+    }
+    .grid-item h2{
+        width: 277px;
+        height: 26px;
+    }
+    .grid-item p{
+        
+        justify-content: center;
+        width: 277px;
+        height: 52px;
+    }
+    .third-content{
+        padding: 12rem ;
+        padding-top: 12rem;
+        margin-top: 40rem;
+
+    }
+    .Designs {
+        display: grid;
+        grid-template-columns: 1fr ;
+        gap: 1rem;
+    }
+    .design-item{
+        width: 689px;
+        height: 200px;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .design-item1{
+        width: 689px;
+        height: 200px;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .project-container{
+        width: 689px;
+    }
+    .gig{
+        display: block;
+        margin: 0 auto;
+        width: 420px;
+        border: 2px solid #0b05bb;
+
+    }
+    .project{
+        justify-content: center;
+    }
+
+    
+    
 }
