--- a/starter-code/css pages/index.css
+++ b/starter-code/css pages/index.css
@@ -88,10 +88,10 @@ nav{
     margin: 0 auto;
     border-radius: 15px;
     background-color: var(--primary-color-peach);
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    background-image: url(../assets/shared/desktop/bg-pattern-call-to-action.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     overflow: hidden;
 }
 
@@ -115,15 +115,10 @@ nav{
     width: 9.5rem;
     height: 3.5rem;
     position: relative;
-    top: -17rem;
-    float: right;
+    margin-top: 8rem; 
     margin-right: 5rem;
     border-radius: .5rem;
     border: none;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
 }
 
 .project{
