--- a/starter-code/css pages/home.css
+++ b/starter-code/css pages/home.css
@@ -36,6 +36,7 @@
 body{
     font-family: 'Jost', sans-serif;
     font-style: normal;
+ 
 }
 
 main{
@@ -80,7 +81,7 @@ nav{
 }
 
 .container1{
-    width: 80%;
+    width: 1111px;
     height: 640px;
     background-color: var(--primary-color-peach);
     background-image: url(/starter-code/assets/home/desktop/bg-pattern-hero-home.svg);
@@ -166,6 +167,122 @@ font-family: var(--main-font);
     width: 540px;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: auto 1fr; 
+    gap: 20px;
+    margin: 8rem 13rem;
+   
+    
+  }
+
+  .grid-item {
+  
+    padding: 10px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+  }
+
+  .first-element {
+    grid-row: span 2; 
+    width: 541px;
+    height:640px;
+    background-image: url(/starter-code/assets/home/desktop/image-web-design-large.jpg);
+  }
+
+  .second-element {
+    width: 541px; 
+    height: 308px;
+    background-image: url(/starter-code/assets/home/desktop/image-app-design.jpg)
+  }
+
+  .third-element {
+    width:  541px;
+    height: 308px;
+    background-image: url(/starter-code/assets/home/desktop/image-graphic-design.jpg);
+  }
+
+
+  .first h1{
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 48px;
+    text-transform: uppercase;
+    font-family: var(--heading-3-font);
+    color: var(--primary-color-white)
+  }
+.second h6{
+    text-align: center;
+    font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 22px;
+color: var(--primary-color-white);
+font-family: var(--heading-1-font);
+padding-top: 1.5rem;
+
+letter-spacing: 5px;
+text-transform: uppercase;
+
+}
+
+
+.heading h1{
+    text-transform: uppercase;
+    font-family: var(--heading-1-font);
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 48px;
+    color: var(--primary-color-white);
+    letter-spacing: 2px
+}
+
+.text h6{
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: var(--primary-color-white);
+    padding-top: 1.5rem;
+}
+
+.heading1 h1{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 48px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    color: var(--primary-color-white)
+}
+.text1 h6{
+    text-align: center;
+    font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 22px;
+letter-spacing: 5px;
+text-transform: uppercase;
+padding-top: 1.5rem;
+color: var(--primary-color-white);
+}
+
+.first-hero-text h1{
+    text-align: center;
+}
+.first-hero-text p{
+ width: 350px;
+ text-align: center;
+}
 
 .project-container{
     position: relative;
