working on grid

--- a/starter-code/css pages/web_design.css
+++ b/starter-code/css pages/web_design.css
@@ -135,6 +135,55 @@ nav{
     margin-top: 13rem;
 }
 
+.grid-content{
+    margin-top: -20rem;
+    margin-inline: auto;
+    width: 1111px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+  }
+
+  .grid-item {
+    margin: 0 auto;
+    background: #FDF3F0;
+    border-radius: 15px;
+  }
+
+  .svg-container img{
+   width: 350px;
+   border-top-right-radius: 15px;
+   border-top-left-radius: 15px;
+}
+
+  .express{
+    text-align: center;
+    background: #FDF3F0;
+    border-radius: 15px;
+    color: var(--primary-color-peach);
+    line-height: 26px;
+  }
+
+  .express h1{
+    
+    padding-top: 2rem;
+    font-weight: var(--heading-2-font-weight);
+    font-size: var(--heading-3-font-size);
+    letter-spacing: 5px;
+  }
+
+  .express h2{
+    margin: 0 auto;
+    color: var(--secondary-color-dark-peach);
+    font: var(--main-font-size);
+    padding-top: 16px;
+    width: 286px;
+  }
+
 .project-container{
     position: relative;
     overflow: hidden;
@@ -227,47 +276,44 @@ hr{
 }
 
 
-.container{
-     display: flex;
-     justify-content: space-evenly;
-     align-items: center;
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     color: var(--secondary-color-light-grey);
-   
+    width: 69.438rem;
+    margin: 0 auto;
+    line-height: 1.5rem;
 }
-
-.container-direction{
+.container-direction {
     mix-blend-mode: normal;
     opacity: 0.5;
 }
-.container-direction h1{
+.container-direction h1 {
     font-size: var(--heading-3-font-size);
 }
-
-.container-direction h2{
+.container-direction h2 {
     font-size: var(--heading-1-font-size);
 }
-
-.container-contact{
+.container-contact {
     mix-blend-mode: normal;
     opacity: 0.5;
 }
-
-.container-contact h1{
+.container-contact h1 {
     font-size: var(--heading-3-font-size);
 }
-
-.container-contact h2{
+.container-contact h2 {
     font-size: var(--heading-1-font-size);
 }
-
 .footer-icons {
     width: 10rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 45px;
 }
-
-.footer-icons img{
+.footer-icons img {
     width: 15px;
 }
+
+
 
