--- a/starter-code/css pages/home.css
+++ b/starter-code/css pages/home.css
@@ -84,7 +84,8 @@ nav{
     width: 1111px;
     height: 640px;
     background-color: var(--primary-color-peach);
-    background-image: url(/starter-code/assets/home/desktop/bg-pattern-hero-home.svg);
+  
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,6 +97,12 @@ nav{
     border-radius: 8px;
 }
 
+.pattern img{
+    position: absolute;
+    right: 0%;
+    top: 1%;
+    width: 640px;
+}
 
 .container-box{
     /* width: 40%; */
@@ -549,3 +556,118 @@ hr{
     width: 15px;
 }
 
+
+@media only screen and (max-width:820px) and (min-width: 450px){
+
+ body{
+    background: red;
+ }
+  .container1{
+   height: 843px;
+    width: 689px;
+  }
+
+.container-box{
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.container-details{
+    width: 573px;
+    height: 326px;
+
+    margin-top: 400px;
+    
+}
+
+.container-header h1{
+    font-size: 48px;
+}
+.container-paragraph p{
+    margin: 0 auto;
+}
+.container-image img{
+ height: 750px;
+
+   margin: 0;
+}
+
+.pattern img{
+
+   
+}
+.grid-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.first-element {
+   
+    width: 689px;
+    height: 200px;
+    background-image: url(/starter-code/assets/home/tablet/image-web-design.jpg);
+
+}
+
+.second-element {
+    width: 689px; 
+    height: 200px;
+    background-image: url(/starter-code/assets/home/tablet/image-app-design.jpg)
+  }
+
+  .third-element {
+    width:  689px;
+    height: 200px;
+    background-image: url(/starter-code/assets/home/tablet/image-graphic-design.jpg);
+  }
+
+ .hero{
+    display: flex;
+    flex-direction: column;
+ }
+
+ .side-leaf img{
+    display: none;
+ }
+
+ .hero-content{
+    display: flex;
+    
+ }
+
+ .hero-text h1{
+    text-align: left;
+ }
+
+ .hero-text p{
+    text-align: left;
+ }
+
+ .hero-content1{
+    display: flex;
+
+ }
+ .hero-text1 h1{
+    text-align: left;
+ }
+
+ .hero-text1 p{
+    text-align: left;
+ }
+ .hero-content2{
+    display: flex;
+    
+ }
+
+ .hero-text2 h1{
+    text-align: left;
+ }
+
+ .hero-text2 p{
+    text-align: left;
+ }
+}
