--- a/starter-code/css pages/graphic-design.css
+++ b/starter-code/css pages/graphic-design.css
@@ -148,7 +148,7 @@ nav{
 
 .grid-item {
     display: flex;
-    background-color: var(--primary-color-white);
+    /* background-color: var(--primary-color-white); */
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -156,12 +156,8 @@ nav{
     border-radius: 20px;
     width: 350px;
     height: 478px;
-    background: #FDF3F0;
+    background-color: #FDF3F0;
 } 
-.grid-item:hover{
-    background: var(--primary-color-peach);
-    cursor: pointer;
-}
 
 .grid-item h2 {
     width: 286px;
@@ -201,7 +197,7 @@ nav{
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
 }
-.design-item {
+.design-item{
     width: 541px;
     height: 308px;
     display: flex;
@@ -212,17 +208,58 @@ nav{
     padding: 30px; 
     border-radius: 20px;
 }
+.design-item h2 {
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 48px;
+    letter-spacing: 2px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
 .design-item1 {
     width: 541px;
     height: 308px;
     display: flex;
-    background-image: url(../assets/home/desktop/image-web-design-large.jpg);
+    background-image: url(../assets/home/desktop/image-web-design-large.jpg) ;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: var(--primary-color-white);
     padding: 30px; 
     border-radius: 20px;
+}
+.design-item1 h2{
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 48px;
+    letter-spacing: 2px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
+.design-item button{
+    background: none;
+    border: none;
+    color: white;
+    margin-top: 1rem;
+    font-size: 15px;
+    line-height: 22px;
+    letter-spacing: 5px;
+    text-transform: uppercase
+}
+.design-item1 button{
+    background: none;
+    border: none;
+    color: white;
+    margin-top: 1rem;
+    font-size: 15px;
+    line-height: 22px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+
+color: #FFFFFF;
+}
+ span{
+    margin-left: 1rem;
+    color: #E7816B;
 }
 
 
@@ -239,21 +276,6 @@ nav{
     background-repeat: no-repeat;
     background-position: center;
     overflow: hidden;
-}
-
-.element {
-    margin-top: -15rem;
-}
-
-.element img{
-    height: 30rem;
-}
-
-
-
-.action{
-  width: 800px;
-  margin-left: 18rem;
 }
 
 
@@ -363,9 +385,12 @@ hr{
 
 
 @media only screen and (max-width:820px) and (min-width: 450px){
+    .page{
+        overflow-x: hidden;
+    }
     nav{
-        width: 50rem;
-        /* margin: 14.84px auto 0 auto; */
+        width: 43rem;
+        /* justify-content: space-around; */
     }
     .logo{
         margin-left: 1.5rem;
@@ -374,6 +399,13 @@ hr{
     .Main-content{
         width: 689px;
     }
+    .bg-svg{
+        display: none;
+    }
+    /* .Second-content{
+        width: 689px;
+        height: 100%;
+    } */
     .grid-item {
         display: flex;
         background-color: var(--primary-color-white);
@@ -404,17 +436,18 @@ hr{
     }
     .grid-item h2{
         display: block;
-
     }
     .grid-item h2{
         width: 277px;
         height: 26px;
+        margin-left: -2rem;
     }
     .grid-item p{
         
         justify-content: center;
         width: 277px;
         height: 52px;
+        margin-left: -2rem;
     }
     .third-content{
         padding: 12rem ;
@@ -446,14 +479,56 @@ hr{
     .gig{
         display: block;
         margin: 0 auto;
-        width: 420px;
-        border: 2px solid #0b05bb;
-
     }
     .project{
+        width: 573px;
         justify-content: center;
+        margin:  0 auto;
+    }
+    .project h2,.project h1{
+        margin: 0 auto;
+    }
+    .project h2{
+        width: 25rem;
+        text-align: center;
+    }
+    .project h1{
+        width: 335px;
+        height: 98px;
+        text-align: center;
+        margin-top: -2.5rem;
+        font-size: 40px;
+    }
+    .get-touch {
+        margin-left: 17rem;
+        margin-top: 6.5rem;
+        border-radius: .5rem;
+        border: none;
     }
 
-    
-    
+    .foot{
+        width: 768px;
+    }
+    hr{
+        width: 87%;
+        height: 1px;
+        /* margin: 30px auto; */
+        
+    }
+    .container1 {
+        display: flex;
+        justify-content: flex-start;
+        gap: 1rem;
+        margin-left: 3rem;
+        width: 40rem;
+    }
+    .footer-icons {
+        width: 10rem;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 45px;
+    }
+    .footer-icons img {
+        width: 10px;
+    }
 }
