--- a/starter-code/css pages/home.css
+++ b/starter-code/css pages/home.css
@@ -649,6 +649,31 @@ hr{
     
  }
 
+
+ .hero-text{
+    margin-left: 6rem;
+ }
+
+ .hero-text1{
+    margin-left: 6rem;
+ }
+ .hero-text2{
+    margin-left: 6rem;
+ }
+.hero-content{
+    margin-left: 3rem;
+}
+
+.hero-content1{
+    margin-left: 3rem;
+}
+
+.hero-content2{
+    margin-left: 3rem;
+}
+
+
+
  .hero-text h1{
     text-align: left;
  }
@@ -659,6 +684,8 @@ hr{
 
  .hero-content1{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
     
 
  }
@@ -681,6 +708,24 @@ hr{
  .hero-text2 p{
     text-align: left;
  }
+
+.hero-image img{
+ width: 202px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  .project-container{
     width: 689px;
