--- a/starter-code/css pages/home.css
+++ b/starter-code/css pages/home.css
@@ -104,6 +104,10 @@ nav{
     width: 640px;
 }
 
+
+.side-nav img{
+    display: none;
+}
 .container-box{
     /* width: 40%; */
     display: flex;
@@ -175,17 +179,21 @@ font-family: var(--main-font);
 }
 
 .grid-container {
+    width: 1111px;
+    margin: 0 auto;
+  }
+
+  .grid-content{
     display: grid;
     grid-template-columns: auto 1fr; 
     gap: 20px;
-    margin: 8rem 13rem;
-   
+     margin: 13rem auto;
     
   }
 
   .grid-item {
   
-    padding: 10px;
+    
      display: flex;
      justify-content: center;
      align-items: center;
@@ -198,6 +206,7 @@ font-family: var(--main-font);
     background-image: url(/starter-code/assets/home/desktop/image-web-design-large.jpg);
   }
 
+  
   .second-element {
     width: 541px; 
     height: 308px;
@@ -563,6 +572,8 @@ hr{
 }
 
 
+/* Tablet */
+
 @media only screen and (max-width:820px) and (min-width: 450px){
 
 
@@ -601,13 +612,18 @@ hr{
 
    margin: 0;
 }
-
+.side-nav img{
+    display: none;
+}
 
 .grid-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 689px;
+  margin: 0 auto;
+}
+
+.grid-content{
+    display: grid;
+    grid-template-columns: auto;
 }
 .first-element {
    
@@ -787,3 +803,238 @@ hr{
 }
 
 }
+
+
+/* Mobile screen */  
+
+@media only screen and (max-width:425px) and (min-width:305px) {
+
+ body{
+   
+
+ }
+ 
+ .links a {
+    display: none;
+ }
+
+  .side-nav img{
+    display: block;
+
+  }
+
+  .side-nav{
+    position: absolute;
+    right: 1.5rem;
+    top: 9%;
+  }
+
+  .logo{
+   position: relative;
+   bottom: 0.2rem;
+  }
+
+  .container1{
+    width: 100%;
+    height: 843px;
+  } 
+  .container-box{
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+.container-header h6{
+    width: 327px;
+    font-size: 32px;
+   
+}
+
+.container-paragraph p{
+    width: 327px;
+    font-size: 15px;
+}
+.container-button button{
+    width: 152px;
+    height: 56px;
+}
+
+.container-details{
+    width: 327px;
+    height: 312px;
+margin-top: 40rem;
+}
+
+.grid-container{
+    width: 327px;
+    margin: 0 auto;
+}
+
+.grid-content{
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1.7rem;
+    
+}
+/* 
+.container-image img{
+    width: 248px;
+    
+} */
+
+.first-element{
+    background-image: url(/starter-code/assets/home/mobile/image-web-design.jpg);
+    background-repeat: no-repeat;
+    width: 353px;
+    height: 265px;
+    border-radius: 5px;
+}
+
+.second-element{
+    background-image: url(/starter-code/assets/home/mobile/image-app-design.jpg);
+    background-repeat: no-repeat;
+    width: 339px;
+    height: 263px;
+    border-radius: 5px;
+    
+} 
+
+.third-element{
+    background-image: url(/starter-code/assets/home/mobile/image-graphic-design.jpg);
+    background-repeat: no-repeat; 
+    width: 335px;
+    height: 308px;
+    border-radius: 5px;
+
+}
+
+.first h1{
+    font-size: 28px;
+}
+
+.second h6{
+  font-size: 15px;
+}
+
+
+.heading h1{
+    font-size: 28px;
+}
+.heading1 h1{
+    font-size: 28px;
+} 
+
+.side-leaf img{
+    display: none;
+}
+
+.hero{
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
+     margin: 0 auto;
+     position: relative;
+     bottom: 10rem;
+    
+} 
+
+
+.hero-content{
+    width: 327px;
+}
+
+
+.hero-content1{
+    width: 327px;
+}
+
+
+.hero-content2{
+    width: 327px;
+}
+
+.hero-text p{
+    width: 327px;
+    font-size: 15px;
+}
+
+.hero-text1 p{
+    width: 327px;
+    font-size: 15px;
+}
+
+.hero-text2 p{
+    width: 327px;
+    font-size: 15px;
+} 
+
+.project-container{
+    width:327px;
+    height: 379;
+}
+
+.project h1{
+    width: 279px;
+   font-size: 32px;
+ text-align: center;
+font-style: normal;
+font-weight: 500;
+line-height: 36px;
+position: relative;
+bottom: 2rem;
+}
+
+.project h2{
+    width: 279px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    text-align: center;
+    position: relative;
+    bottom: 2rem;
+}
+
+.get-touch button{
+    width: 152px;
+    height: 56px;
+   
+    
+}
+
+.get-touch{
+    position: relative;
+    top: -12rem;
+}
+
+
+footer{
+    width: 100%;
+    height: 815px;
+    
+}
+
+hr{
+    width: 327px;
+    height: 1px;
+}
+
+
+
+ }
+
+
+ @media only screen and (max-width:360px) and (min-width:320px){
+
+    body{
+        
+    }
+
+ }
+
